--- a/practice/CV_Template/index.html
+++ b/practice/CV_Template/index.html
@@ -90,9 +90,114 @@
                 </div>
             </div>
             <div class="right-panel">
-                <div class="work"></div>
-                <div class="edu"></div>
+                <div class="work">
+                    <h2><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i> Work Experience</h2>
+                    <div class="work-block">
+                        <div class="work-info">
+                            <h4>Front End Developer / w3schools.com</h4>
+                            <div class="date">
+                                <i class="fa fa-calendar fa-fw w3-margin-right"></i>
+                                <p> Jan 2015 - </p>
+                                <div class="current">
+                                    current
+                                </div>
+                            </div>
+                            <div class="description">
+                                Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.
+                            </div>
+                            <div class="hr-line">
+                                <div class="hr"></div>
+                            </div>   
+                        </div>
+                    </div>
+                    <div class="work-block">
+                        <div class="work-info">
+                            <h4>Web Developer / somethingcom</h4>
+                            <div class="date">
+                                <i class="fa fa-calendar fa-fw w3-margin-right"></i>
+                                <p> Mar 2012 - Dec 2014</p>
+                            </div>
+                            <div class="description">
+                                Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.
+                            </div>
+                            <div class="hr-line">
+                                <div class="hr"></div>
+                            </div>   
+                        </div>
+                    </div>
+                    <div class="work-block">
+                        <div class="work-info">
+                            <h4>Graphic Designer / designsomething.com</h4>
+                            <div class="date">
+                                <i class="fa fa-calendar fa-fw w3-margin-right"></i>
+                                <p>Jun 2010 - Mar 2012</p>
+                            </div>
+                            <div class="description">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="edu">
+                    <h2><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+                    <div class="work-block">
+                        <div class="work-info">
+                            <h4>W3Schools.com</h4>
+                            <div class="date">
+                                <i class="fa fa-calendar fa-fw w3-margin-right"></i>
+                                <p>Forever</p>
+                            </div>
+                            <div class="description">
+                                Web Development! All I need to know in one place
+                            </div>
+                            <div class="hr-line">
+                                <div class="hr"></div>
+                            </div>   
+                        </div>
+                    </div>
+                    <div class="work-block">
+                        <div class="work-info">
+                            <h4>London Business School</h4>
+                            <div class="date">
+                                <i class="fa fa-calendar fa-fw w3-margin-right"></i>
+                                <p>2013 -  2015</p>
+                            </div>
+                            <div class="description">
+                                Master Degree
+                            </div>
+                            <div class="hr-line">
+                                <div class="hr"></div>
+                            </div>   
+                        </div>
+                    </div>
+                    <div class="work-block">
+                        <div class="work-info">
+                            <h4>School of Coding</h4>
+                            <div class="date">
+                                <i class="fa fa-calendar fa-fw w3-margin-right"></i>
+                                <p>2010 - 2013</p>
+                            </div>
+                            <div class="description">
+                                Bechelor Degree
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+        <div class="footer">
+            <div>
+                <p>Find me on social media.</p>
+            </div>
+            <div class="social-links">
+                <i class="fa fa-facebook-official w3-hover-opacity"></i>
+                <i class="fa fa-instagram w3-hover-opacity"></i>
+                <i class="fa fa-snapchat w3-hover-opacity"></i>
+                <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+                <i class="fa fa-twitter w3-hover-opacity"></i>
+                <i class="fa fa-linkedin w3-hover-opacity"></i>
+            </div>
+            <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp">w3.css</a></p>
         </div>
     </body>
 </html>
