--- a/JavaScript/events.html
+++ b/JavaScript/events.html
@@ -20,7 +20,7 @@
             }
         </style>
     </head>
-    <body>
+    <body id="b" onload="onLoad()">
         <h1>On Click</h1>
         <div class="color-box" id="box-1">
         </div>
@@ -31,8 +31,13 @@
         <div class="color-box" id="box-3"></div>
         <h1>Focus and Blur </h1> 
 			<input id="somthingRandom">
+		<h1>Onload</h1>
 		<script> 
 
+			// onload
+			function onLoad(){
+				document.getElementById("b").style.backgroundColor = "yellow"; 
+			}
             // onclick
             document.getElementById("box-1").addEventListener("click", function(){
                 document.getElementById("box-1").style.width = "500px";
