--- a/past-papers/june-2019/Q01b.html
+++ b/past-papers/june-2019/Q01b.html
@@ -6,10 +6,10 @@
   </head>
 
   <body>
-    <h2>All About Pluto</u></h2>
+    <u><h2>All About Pluto</h2></u>
     <ul>
       <li>There are 8 planets in our solar system.</li>
-      <li><i>Pluto is classified as a dwarf planet.</li>
+      <li><i>Pluto is classified as a dwarf planet.</i></li>
       <li>Some scientists think Pluto contains the ingredients for life.</li>
       <li><i>Pluto is made up of mainly rock and ice.</i></li>
       <li>Pluto’s day is 153.3 hours long.</li>
