--- a/practice/css_animation/index.html
+++ b/practice/css_animation/index.html
@@ -12,11 +12,25 @@
                 background-color: red; 
                 height: 50%; 
                 width: 50%; 
-                transition: 1s cubic-bezier(0.42, 0, 0, 1.64); 
+                animation: left-to-right 1s linear infinite alternate;
             }
             .parent:hover .child{
-                background-color: yellowgreen; 
-                transform: translateX(100%); 
+                background-color: yellowgreen;   
+            }
+
+            @keyframes left-to-right{
+                0%{
+                    transform: translateX(0); 
+                }
+                33%{
+                    transform: translateY(100%); 
+                }
+                66%{
+                    transform: translateX(100%) translateY(100%);
+                }
+                100%{
+                    transform: translateX(100%);
+                }
             }
         </style>
     </head>
