--- a/past-papers/june-2021/Q02dFINISHED.html
+++ b/past-papers/june-2021/Q02dFINISHED.html
@@ -5,7 +5,16 @@
     <title>Q02d</title> 
     <style>
       /*Add CSS styling here */
-      
+        table{
+            width: 100%;
+            text-align: center; 
+        }
+        table th{
+            font-size: 20px; 
+        }
+        table tfoot{
+            background-color: red; 
+        }
 
     
     </style>
