finished Q03c -- past activity

--- a/past-papers/june-2021/Q03cFINISHED.html
+++ b/past-papers/june-2021/Q03cFINISHED.html
@@ -13,7 +13,7 @@
          var hiddenName = ""; 
          
          //add code to replace each character in the inputName with an asterisk and display the hidden name
-         for (count=1; count<inputName.length; count++){
+         for (count=1; count<=inputName.length; count++){
             hiddenName+="*"; 
          }   
 
