--- a/past-papers/june-2021/Q05/welcome.html
+++ b/past-papers/june-2021/Q05/welcome.html
@@ -34,20 +34,10 @@
         The message for adults is in the file adult.txt */
 
         if(parseInt(age) === 15){ // if the age argument matches 15, go ahead and fire this if : meaning that the age must be lower than 15 or equal to 15
-          fetch('junior.txt')
-            .then(response => response.text())
-            .then(data=> {
-              // go and write for the corresponding p tag that's for displaying the message
-              document.getElementById("ageMessage").innerHTML = data;   
-            }); 
+          document.getElementById("ageMessage").innerHTML = "Please note that in the next few weeks we will be adding a junior section to our website. You will automatically have access to that part of the site.  There will be fun things to do and weekly competitions.";   
         }
         else{ // if the age doesn't equal to  15 : meaning that the age is greater than 15
-          fetch('adult.txt')
-            .then(response => response.text())
-            .then(data=> {
-              // go and write for the corresponding p tag that's for displaying the message
-              document.getElementById("ageMessage").innerHTML = data;   
-            }); 
+          document.getElementById("ageMessage").innerHTML = "We would like to invite you to our weekly online fundraising idea forum. This takes place on a Tuesday between GMT hours of 19:00 and 20:00. We hope to see you there.";   
         }
       }
     </script>
