--- a/unit-2/practice-2/june-2021/Q05/welcome.html
+++ b/unit-2/practice-2/june-2021/Q05/welcome.html
@@ -25,17 +25,22 @@
         
 
        // add code to display the username:
-
+      document.getElementById("welcomeMessage").innerHTML = username; 
 
 
         /* add code to display the relevant age related message/
         The message for juniors is in the file junior.txt
         The message for adults is in the file adult.txt */
-
+      if(age <= 15){ // if age is less than or equal to 15 so junior.txt
+        document.getElementById('ageMessage').innerHTML = "Please note that in the next few weeks we will be adding a junior section to our website. You will automatically have access to that part of the site.  There will be fun things to do and weekly competitions."; 
       }
+      else{ // adults so adult.txt
+        document.getElementById("ageMessage").innerHTML = "We would like to invite you to our weekly online fundraising idea forum. This takes place on a Tuesday between GMT hours of 19:00 and 20:00. We hope to see you there."; 
+      }
+     }
     </script>
     <h1>Thank you for your registration</h1>
     <h2 id="welcomeMessage"><!-- username displays here  --></h2>
-     <p id="ageMessage"><!-- age related message displays here --></p>
+    <p id="ageMessage"><!-- age related message displays here --></p>
   </body>
 </html>
